[package]
name = "kms"
version = "1.2.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
common-rs = { git = "https://github.com/cita-cloud-cache/common-rs", default-features = false, features = [
    "config",
    "redis",
    "log",
    "restful",
    "sm",
] }

clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
ethers = { version = "2.0", default-features = false }
hex = "0.4"
parking_lot = "0.12"
salvo = { version = "0.67", features = ["affix"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"

[profile.release.package."*"]
debug = 0

[profile.release]
debug = 1

[profile.dev.package.backtrace]
opt-level = 3

[lints.rust]
unsafe_code = "forbid"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"

[lints.clippy]
missing_const_for_fn = "warn"
